feat: harden backend foundation